--- a/Index.html
+++ b/Index.html
@@ -8,10 +8,24 @@
             <link rel="stylesheet" href="Index.css">
         </head>
         <body>
-            <nav>
-                <a>Student Hall</a>
-                <a>Documentation</a>
-                <a>sign up</a> <span>|</span> <a>sign in</a>
+            <nav class="navbar">
+                <ul class="navbar-list">
+                    <li class="navbar-item">
+                        <a href="#" class="navbar-link">Student Hall</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="navbar-link">Documentation</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="navbar-link">sign up</a>
+                        <span>|</span>
+                        <a href="#" class="navbar-link">sign in</a> 
+                    </li>
+                </ul>
             </nav>
+            <main>
+                <h2>let's Make Learning Fun</h2>
+                <p>by combining learning and playing, we could achive high level learning</p>
+            </main>
         </body>
     </html>
