Changing Title Text into Stylized PNG
HTML Changes:
- Changed "Student Hall" Title into PNG format

CSS Changes:
- Added "img" semantic
- fixed navigation alignment and spacing

--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
             <nav class="navbar">
                 <ul class="navbar-list">
                     <li class="navbar-item">
-                        <a href="#" class="navbar-link">Student Hall</a>
+                        <a href="#" class="navbar-link"> <img src="Student Hall Logo.png" alt="Student Hall Logo" height="40"> </a>
                     </li>
                     <li class="nav-item">
                         <a href="#" class="navbar-link">Documentation</a>
