Adding navigation bar Border
changes:
-added navigation border

--- a/Index.html
+++ b/Index.html
@@ -10,11 +10,13 @@
         <body>
             <nav class="navbar">
                 <ul class="navbar-list">
-                    <li class="navbar-item">
-                        <a href="#" class="navbar-link"> <img src="Student Hall Logo.png" alt="Student Hall Logo" height="40"> </a>
-                    </li>
                     <li class="nav-item">
                         <a href="#" class="navbar-link">Documentation</a>
+                    </li>
+                    <li class="navbar-item">
+                        <a href="#" class="navbar-link" style="font-size: 0;">
+                            <img src="Student Hall Logo.png" alt="Student Hall Logo" height="36">
+                        </a>
                     </li>
                     <li class="nav-item">
                         <a href="#" class="navbar-link">sign up</a>
@@ -22,6 +24,7 @@
                         <a href="#" class="navbar-link">sign in</a> 
                     </li>
                 </ul>
+                <div class="nav-border"></div>
             </nav>
             <main>
                 <h2>let's Make Learning Fun</h2>
