Edit the text in index.html
changes in line 30: adding dot at the end of the word.

--- a/Index.html
+++ b/Index.html
@@ -27,7 +27,7 @@
                 <div class="nav-border"></div>
             </nav>
             <main>
-                <h2>let's Make Learning Fun</h2>
+                <h2>let's Make Learning Fun.</h2>
                 <p>by combining learning and playing, we could achive high level learning</p>
             </main>
         </body>
