Reworking on Index
changes:
- basically making the index back from the scratch

--- a/Index.html
+++ b/Index.html
@@ -1,34 +1,33 @@
 <!DOCTYPE html>
-    <html lang="en">
-        <head>
-            <meta charset="UTF-8">
-            <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <title>Student Hall</title>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Student Hall</title>
+    <link rel="stylesheet" href="CSS/reset.css">
+    <link rel="stylesheet" href="CSS/Index.css">
+</head>
 
-            <link rel="stylesheet" href="Index.css">
-        </head>
-        <body>
-            <nav class="navbar">
-                <ul class="navbar-list">
-                    <li class="nav-item">
-                        <a href="#" class="navbar-link">Documentation</a>
-                    </li>
-                    <li class="navbar-item">
-                        <a href="#" class="navbar-link" style="font-size: 0;">
-                            <img src="Student Hall Logo.png" alt="Student Hall Logo" height="36">
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="navbar-link">sign up</a>
-                        <span>|</span>
-                        <a href="#" class="navbar-link">sign in</a> 
-                    </li>
-                </ul>
-                <div class="nav-border"></div>
-            </nav>
-            <main>
-                <h2>let's Make Learning Fun.</h2>
-                <p>by combining learning and playing, we could achive high level learning</p>
-            </main>
-        </body>
-    </html>
+<body>
+    <div class="nav-bar">
+        <div class="nav-item item-1">[1]</div>
+        <a class="nav-item item-2 element-primary" href="Index.html">
+            <img class="" src="Bin/Student-Hall-Logo-008f8c.png" height="36px">
+        </a>
+        <div class="nav-item item-3">
+            <a href="HTML/Sign in.html">Sign in</a><span>|</span><a href="HTML/Sign up.html">Sign up</a>
+        </div>
+    </div>
+    <div class="nav-border"></div>
+    <section class="bg-primary">
+        <h1>Heading</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur cupiditate molestiae sequi vero repudiandae rerum quia magnam eius quod illum. Magnam quo repudiandae eveniet? Excepturi nostrum alias dolorem voluptate obcaecati.</p>
+    </section>
+    <section class="bg-secondary">
+        <h1>Heading</h1>
+        <i class="fa-solid fa-person"></i>
+        <p>Ex quo voluptatibus, corporis culpa nobis porro eligendi nam atque assumenda et cum aspernatur accusamus ipsa iure enim! Temporibus autem dignissimos nihil aliquam ipsam aut. Ipsam amet perspiciatis esse quis?</p>
+    </section>
+</body>
+
+</html>
