--- a/HTML/Sign in.html
+++ b/HTML/Sign in.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="/CSS/reset.css">
-        <link rel="stylesheet" href="/CSS/Sign in.css">
+        <link rel="stylesheet" href="CSS/reset.css">
+        <link rel="stylesheet" href="CSS/Sign in.css">
         <title>Document</title>
     </head>
     <body>
@@ -44,10 +44,10 @@
                         </form>
                     </div>
                     <div class="bird-brain">
-                        <a href="/HTML/Forgot password.html">
+                        <a href="Forgot password.html">
                             <div class="forgor">Forgot password?</div>
                         </a>
-                        <a href="/HTML/Sign up.html">
+                        <a href="Sign up.html">
                             <div class="signup">Doesn't have an account?</div>
                         </a>
                     </div>
