--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </svg>
         </a>
         <div class="nav-item item-3">
-            <a href="HTML/Sign in.html">Sign in</a><span>|</span><a href="HTML/Sign up.html">Sign up</a>
+            <a href="/HTML/Sign in.html">Sign in</a><span>|</span><a href="/HTML/Sign up.html">Sign up</a>
         </div>
     </div>
     <div class="nav-border"></div>
