--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
     </div>
     <div class="nav-border"></div>
     <section class="bg-primary">
-        <h1>Heading</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur cupiditate molestiae sequi vero repudiandae rerum quia magnam eius quod illum. Magnam quo repudiandae eveniet? Excepturi nostrum alias dolorem voluptate obcaecati.</p>
+        <div class="slogan">
+            <h1>Let's Make Learning More Exciting.</h1>
+            <p>Reward those with passion and creativity in learning.</p>
+        </div>
     </section>
     <section class="bg-secondary">
         <h1>Heading</h1>
