Update on html directory destination
Fixing all directory destination for html and css, so it can be proceed through website

--- a/HTML/Sign in.html
+++ b/HTML/Sign in.html
@@ -55,13 +55,13 @@
                     <div class="method">
                         <a href="" class="google-link">
                             <div class="sphere1">
-                                <img src="/Bin/google.png" class="google" height="30">
+                                <img src="../Bin/google.png" class="google" height="30">
                                 Google
                             </div>
                         </a>
                         <a href="" class="microsoft-link">
                             <div class="sphere2">
-                                <img src="/Bin/microsoft.png" class="microsoft" height="25">
+                                <img src="../Bin/microsoft.png" class="microsoft" height="25">
                                 Microsoft
                             </div>
                         </a>
