updating index.html
- Add styling to some element.
- Fix the destination of some page
  directory to html and css file.

--- a/index.html
+++ b/index.html
@@ -27,14 +27,16 @@
             </svg>
         </a>
         <div class="nav-item item-3">
-            <a href="HTML/Sign in.html">Sign in</a><span>|</span><a href="HTML/Sign up.html">Sign up</a>
+            <a href="HTML/Sign in.html"></a><div class="signin element-primary">Sign in</div></a>
+            <span>|</span>
+            <a href="HTML/Sign up.html"></a><div class="signup">Sign up</div></a>
         </div>
     </div>
     <div class="nav-border"></div>
     <section class="bg-primary">
         <div class="slogan">
-            <h1>Let's Make Learning More Exciting.</h1>
-            <p>Reward those with passion and creativity in learning.</p>
+            <p class="txt-1 element-primary">Let's Make Learning More Exciting.</p>
+            <p class="txt-2 element-secondary">Reward those with passion and creativity in learning.</p>
         </div>
     </section>
     <section class="bg-secondary">
