updating index.html and index.css
- Add styling to some element
- Fix dirextory issue for linking other
   page

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
             </svg>
         </a>
         <div class="nav-item item-3">
-            <a href="HTML/Sign in.html"></a><div class="signin element-primary">Sign in</div></a>
+            <a href="HTML/Sign in.html"><div class="signin element-primary">Sign in</div></a>
             <span>|</span>
-            <a href="HTML/Sign up.html"></a><div class="signup">Sign up</div></a>
+            <a href="HTML/Sign up.html"><div class="signup">Sign up</div></a>
         </div>
     </div>
     <div class="nav-border"></div>
