Update on Landing page
-Changing the join buttton property
-Adding hover effect to the join button

--- a/index.html
+++ b/index.html
@@ -80,7 +80,9 @@
                         <p class="txt-2 pos-relat element-secondary">Reward those with passion and creativity in learning</p>
                     </div>
                     <div class="join">
-                        <span class="join-btn">Join Us</span>
+                        <a href="HTML/Sign up.html">
+                            <span class="join-btn">Join Us</span>
+                        </a>
                         <p class="join-slogan">Learning has never been so fun.</p>
                     </div>
                     <div id="ellipse-1"></div>
