Adding Comments & Target Atribute
Changes:
    - Added Comments (ln. 91 & 92)
    - Added Target Atribute to every <a> element (expect for the sidebar)

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         </div>
                     </div>
                     <div class=" item-2 self-center element-primary img-logo">
-                    <a href="index.html">
+                    <a href="index.html" target="_self">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1823.95 305.75" class="fill-primary" height="36">
                             <path class="cls-3" d="m285.16,273.96c-1.14-4.03-3.52-5.22-7.13-3.57-2.28,1.04-5.43,2.09-9.46,3.18-4.03,1.08-7.65,1.63-10.86,1.63-6.31,0-10.21-2.3-11.71-6.9-1.5-4.6-2.25-12.17-2.25-22.72v-74.83c0-1.16.94-2.1,2.1-2.1h23.03c6.1,0,9.15-2.58,9.15-7.75v-15.51c0-5.17-3.05-7.75-9.15-7.75h-23.03c-1.16,0-2.1-.94-2.1-2.1v-31.48c0-6.3-5.11-11.4-11.4-11.4h-8.76c-3.1,0-5.79,1.97-8.06,5.89l-11.94,20.94c-2.17,3.83-3.26,8.06-3.26,12.72v3.33c0,1.16-.94,2.1-2.1,2.1h-8.45c-6.1,0-9.15,2.59-9.15,7.75v15.51c0,5.17,3.05,7.75,9.15,7.75h8.45c1.16,0,2.1.94,2.1,2.1v88.01c0,19.02,5.22,31.59,15.66,37.69,10.44,6.1,23.05,9.15,37.84,9.15,6,0,11.97-.65,17.91-1.94,5.94-1.29,10.62-2.71,14.04-4.27,3.62-1.65,4.96-4.24,4.03-7.75l-4.65-17.68Z"/>
                             <path class="cls-3" d="m452.72,137.64h-24.63c-6.16,0-9.24,3.1-9.24,9.31v61.1c0,26.57-2.77,44.07-8.3,52.5-5.53,8.43-13.62,12.64-24.27,12.64-9.93,0-16.44-2.95-19.54-8.84-3.1-5.89-4.65-20.11-4.65-42.65v-72.65c0-6.3-5.11-11.4-11.4-11.4h-20.62c-6.3,0-11.4,5.11-11.4,11.4v83.82c0,26.88,5.27,45.39,15.82,55.52,10.55,10.13,23.73,15.2,39.55,15.2,10.17,0,18.98-1.53,26.42-4.58,5.63-2.3,10.51-6.07,14.64-11.31,1.24-1.57,3.76-.73,3.76,1.27v.11c0,6.3,5.1,11.4,11.4,11.4h20.31c6.3,0,11.4-5.1,11.4-11.4v-142.13c0-6.2-3.08-9.31-9.24-9.31Z"/>
@@ -68,9 +68,9 @@
                     </a>
                     </div>
                     <div class="item-3 self-center flex">
-                        <a href="HTML/Sign in.html"><div class="signin pos-relat element-primary">Sign in</div></a>
+                        <a href="HTML/Sign in.html" target="_self"><div class="signin pos-relat element-primary">Sign in</div></a>
                         <span>|</span>
-                        <a href="HTML/Sign up.html"><div class="signup flex-center-all pos-relat element-primary">Sign up</div></a>
+                        <a href="HTML/Sign up.html" target="_self"><div class="signup flex-center-all pos-relat element-primary">Sign up</div></a>
                     </div>
                 </div>
                 <div class="nav-border"></div>
@@ -80,7 +80,7 @@
                         <p class="txt-2 pos-relat element-secondary">Reward those with passion and creativity in learning</p>
                     </div>
                     <div class="join">
-                        <a href="HTML/Sign up.html">
+                        <a href="HTML/Sign up.html" target="_self">
                             <span class="join-btn">Join Us</span>
                         </a>
                         <p class="join-slogan">Learning has never been so fun.</p>
@@ -88,8 +88,8 @@
                     <div id="ellipse-1"></div>
                     <div id="ellipse-2"></div>
                     <div class="hero-img">
-                        <img class="img-2" src="Bin/SVG/Student 2.svg" height="660">
-                        <img class="img-1" src="Bin/SVG/Student 1.svg" height="580">
+                        <img class="img-2" src="Bin/SVG/Student 2.svg" height="660"> <!--Change to png (taking too long to load)-->
+                        <img class="img-1" src="Bin/SVG/Student 1.svg" height="580"> <!--this one too-->
                     </div>
                 </section>
                 <article>
