Renaming & Relinking HTML
Changes:
- renamed:    HTML/Sign in.html -> HTML/Sign-in.html
- renamed:    HTML/Sign up.html -> HTML/Sign-up.html
- modified:   index.html
    relinking renamed html

--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
                     </a>
                     </div>
                     <div class="item-3 self-center flex">
-                        <a href="HTML/Sign in.html" target="_self"><div class="signin pos-relat element-primary">Sign in</div></a>
+                        <a href="HTML/Sign-in.html" target="_self"><div class="signin pos-relat element-primary">Sign in</div></a>
                         <span>|</span>
-                        <a href="HTML/Sign up.html" target="_self"><div class="signup flex-center-all pos-relat element-primary">Sign up</div></a>
+                        <a href="HTML/Sign-up.html" target="_self"><div class="signup flex-center-all pos-relat element-primary">Sign up</div></a>
                     </div>
                 </div>
                 <div class="nav-border"></div>
@@ -80,7 +80,7 @@
                         <p class="txt-2 pos-relat element-secondary">Reward those with passion and creativity in learning</p>
                     </div>
                     <div class="join">
-                        <a href="HTML/Sign up.html" target="_self">
+                        <a href="HTML/Sign-up.html" target="_self">
                             <span class="join-btn">Join Us</span>
                         </a>
                         <p class="join-slogan">Learning has never been so fun.</p>
