--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
                     <div id="ellipse-1"></div>
                     <div id="ellipse-2"></div>
                     <div class="hero-img">
-                        <img class="img-2" src="Bin/SVG/Student-2.png" height="660">
-                        <img class="img-1" src="Bin/SVG/Student-1.png" height="580">
+                        <img class="img-2" src="./Bin/PNG/Student-2.png" height="660">
+                        <img class="img-1" src="./Bin/PNG/Student-1.png" height="580">
                     </div>
                 </section>
                 <article>
